# sign-tutor-k8s-2CL

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  spec_01_architecture.md  spec_02_module1_build.md  spec_03_test_plan.md  spec_04_data_acquisition.md  spec_05_lab_guide.md
.github/workflows/: ci.yml
Logs/: bug_report_2026-06-12.md
checkpoints/asl/: best.pt  train_log.csv
configs/: thresholds.yaml
k8s/chart/: Chart.yaml  values.yaml
k8s/chart/files/: README.md
k8s/cluster-setup/: README.md
k8s/scripts/: deploy-participant.sh  reset-participant.sh
languages/asl/: config.yaml  model.onnx
languages/isl/: config.yaml
src/: __init__.py  registry.py
src/capture/: __init__.py  hands.py
src/features/: __init__.py  normalise.py
src/inference/: __init__.py  triton_client.py
src/lesson/: __init__.py  controller.py  scorer.py  smoother.py
src/terminal/: __init__.py  config.py  executor.py
src/ui/: __init__.py  app.py  theme.py
tests/fixtures/: synthetic.py
tests/integration/: test_pipeline.py
tests/unit/: test_augment.py  test_features.py  test_image_versions.py  test_normalise.py  test_registry.py  test_scorer.py  test_smoother.py  test_terminal_executor.py
training/: __init__.py  augment.py  build_asl_model.sh  build_engine.sh  capture.py  check_quality.py  export_onnx.py  extract_landmarks.py  model_one_hand.py  train_classifier.py
triton_repo/asl_classifier/: config.pbtxt
triton_repo/isl_classifier/: config.dynamic.pbtxt  config.pbtxt
(+11 files in other folders)
